@@ -594,7 +594,6 @@ tr1_impl_headers = \
 	${tr1_impl_srcdir}/regex \
 	${tr1_impl_srcdir}/tuple \
 	${tr1_impl_srcdir}/type_traits \
-	${tr1_impl_srcdir}/type_traitsfwd.h \
 	${tr1_impl_srcdir}/unordered_map \
 	${tr1_impl_srcdir}/unordered_set \
 	${tr1_impl_srcdir}/utility
